logs/test_jit_error.txt
   Compiling tracea v0.1.0 (E:\Projects\Tracea)
error[E0405]: cannot find trait `DevicePtrAny` in module `cudarc::driver`
  --> src\emitter\jit.rs:58:48
   |
58 |         params: &mut [&mut dyn cudarc::driver::DevicePtrAny],
   |                                                ^^^^^^^^^^^^ help: a trait with a similar name exists: `DevicePtr`
   |
  ::: C:\Users\kouno\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\cudarc-0.12.1\src\driver\safe\device_ptr.rs:34:1
   |
34 | pub trait DevicePtr<T>: DeviceSlice<T> {
   | -------------------------------------- similarly named trait `DevicePtr` defined here

warning: unused imports: `PyRefMut` and `PyRef`
 --> src\interface\python.rs:6:12
  |
6 | use pyo3::{PyRef, PyRefMut};
  |            ^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `cudarc::nvrtc::Ptx`
 --> src\interface\python.rs:9:5
  |
9 | use cudarc::nvrtc::Ptx;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashSet`
 --> src\semantic\mapping.rs:1:5
  |
1 | use std::collections::HashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0405`.
warning: `tracea` (lib test) generated 3 warnings
error: could not compile `tracea` (lib test) due to 1 previous error; 3 warnings emitted
